change listen attribute and php root path.

--- a/configs/php-fpm.d/www.conf
+++ b/configs/php-fpm.d/www.conf
@@ -19,8 +19,8 @@ group = apache
 ;                            (IPv6 and IPv4-mapped) on a specific port;
 ;   '/path/to/unix/socket' - to listen on a unix socket.
 ; Note: This value is mandatory.
-;listen = /var/run/php-fpm.sock
-listen = 127.0.0.1:9001
+listen = /var/run/php-fpm.sock
+;listen = 127.0.0.1:9001
 
 ; Set listen(2) backlog.
 ; Default Value: 511 (-1 on FreeBSD and OpenBSD)
