--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -1,5 +1,5 @@
 
-#user  nobody;
+user  apache;
 worker_processes  1;
 
 #error_log  logs/error.log;
@@ -52,7 +52,8 @@ http {
             try_files $uri $uri/ =404;  
         }
 
-        location ~ \.php$ {                                         
+        location ~ \.php$ {
+	    root /www-data;
             try_files $uri =404;                                
             fastcgi_split_path_info ^(.+\.php)(/.+)$;           
             fastcgi_pass unix:/var/run/php-fpm.sock;            
